@@ -41,15 +41,14 @@ import javax.swing.table.TableColumn;
 import javax.swing.table.TableColumnModel;
 import javax.swing.tree.DefaultMutableTreeNode;
 
-import com.cannontech.common.YukonColorPalette;
 import com.cannontech.common.editor.PropertyPanelEvent;
 import com.cannontech.common.gui.util.ColorComboBoxCellRenderer;
 import com.cannontech.common.gui.util.ColorTableCellRenderer;
+import com.cannontech.common.gui.util.Colors;
 import com.cannontech.common.gui.util.CtiTreeCellRenderer;
 import com.cannontech.common.gui.util.DataInputPanel;
 import com.cannontech.common.gui.util.DataInputPanelListener;
 import com.cannontech.common.gui.util.TreeViewPanel;
-import com.cannontech.common.trend.model.GraphColors;
 import com.cannontech.core.dao.PointDao;
 import com.cannontech.database.data.graph.GraphDefinition;
 import com.cannontech.database.data.lite.LitePoint;
@@ -76,6 +75,7 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
     private DeviceTree_CustomPointsModel graphPointsModel = null;
     private DeviceTree_CustomPointsModel usagePointsModel = null;
     private TDCDeviceTreeModel allTypesPointsModel = null;
+    private GraphColors graphColors;
     private JButton ivjThresholdsButton = null;
     private GraphDefinition value;
     private JPanel ivjPointOptionsPanel = null;
@@ -147,7 +147,7 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
 
                 // Create the GDS to add in the tables.
                 GraphDataSeries gds = createGDS(pt, null);
-                gds.setMultiplier(Double.valueOf(value));
+                gds.setMultiplier(new Double(value));
                 GDSTableModel model = (GDSTableModel) getGraphGDSTable().getModel();
                 model.addRow(gds);
             }
@@ -243,7 +243,7 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
      */
     public GraphDataSeries createGDS(LitePoint point, String deviceName) {
         GraphDataSeries gds = new GraphDataSeries();
-        gds.setPointID(Integer.valueOf(point.getPointID()));
+        gds.setPointID(new Integer(point.getPointID()));
 
         String gdsLabel = point.getPointName();
 
@@ -263,15 +263,15 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
         }
         gds.setLabel(gdsLabel);
 
-        gds.setAxis(Character.valueOf('L'));
-        gds.setColor(0);    //just default to first in list for now
+        gds.setAxis(new Character('L'));
+        gds.setColor(new Integer(getGraphColors().getNextLineColorID()));
 
-        gds.setRenderer(Integer.valueOf(GraphRenderers.LINE));
+        gds.setRenderer(new Integer(GraphRenderers.LINE));
         // call to obtain the type from the database (pointUnit)
         String type = getPointTypeString(point);
-        gds.setType(Integer.valueOf(GDSTypesFuncs.getTypeInt(type)));
+        gds.setType(new Integer(GDSTypesFuncs.getTypeInt(type)));
 
-        gds.setMultiplier(Double.valueOf(1.0));
+        gds.setMultiplier(new Double(1.0));
 
         // ADD GDS TO THE PRIMARY POINT COMBO BOX.
         getPrimaryPointComboBox().addItem(gds.getLabel().toString());
@@ -452,6 +452,14 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
         return ivjCreateGraphSplitPane;
     }
 
+    public GraphColors getGraphColors() {
+        if (graphColors == null) {
+            graphColors = new GraphColors();
+        }
+
+        return graphColors;
+    }
+
     private GraphDefinition getGraphDefinitionValue() {
         return value;
     }
@@ -512,8 +520,14 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
                 // colModel.getColumn(GDSTableModel.SETUP_NAME_COLUMN).setPreferredWidth(10);
 
                 // Color choices setup
-                YukonColorPalette[] colors = GraphColors.getYukonColors();
-                JComboBox<YukonColorPalette> colorComboBox = new JComboBox<>(colors);
+                Color[] colors = getGraphColors().getAvailableColors();
+                String[] colorStrings = new String[colors.length];
+
+                for (int i = 0; i < colors.length; i++) {
+                    colorStrings[i] =
+                        Colors.getColorString(com.cannontech.common.gui.util.Colors.getColorID(colors[i]));
+                }
+                JComboBox<String> colorComboBox = new JComboBox<>(colorStrings);
                 colorComboBox.setRenderer(new ColorComboBoxCellRenderer());
                 DefaultCellEditor colorEditor = new DefaultCellEditor(colorComboBox);
 
@@ -1016,27 +1030,27 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
         gDefInfo.setName(trendName);
 
         if (!getAxisPanel().getLeftAutoScalingCheckBox().isSelected()) {
-            gDefInfo.setAutoScaleLeftAxis(Character.valueOf('N'));
+            gDefInfo.setAutoScaleLeftAxis(new Character('N'));
         } else {
-            gDefInfo.setAutoScaleLeftAxis(Character.valueOf('Y'));
+            gDefInfo.setAutoScaleLeftAxis(new Character('Y'));
         }
 
         try {
-            gDefInfo.setLeftMin(Double.valueOf(getAxisPanel().getLeftMinTextField().getText()));
-            gDefInfo.setLeftMax(Double.valueOf(getAxisPanel().getLeftMaxTextField().getText()));
+            gDefInfo.setLeftMin(new Double(getAxisPanel().getLeftMinTextField().getText()));
+            gDefInfo.setLeftMax(new Double(getAxisPanel().getLeftMaxTextField().getText()));
         } catch (NumberFormatException nfe) {
             nfe.printStackTrace();
         }
 
         if (!getAxisPanel().getRightAutoScalingCheckBox().isSelected()) {
-            gDefInfo.setAutoScaleRightAxis(Character.valueOf('N'));
+            gDefInfo.setAutoScaleRightAxis(new Character('N'));
         } else {
-            gDefInfo.setAutoScaleRightAxis(Character.valueOf('Y'));
+            gDefInfo.setAutoScaleRightAxis(new Character('Y'));
         }
 
         try {
-            gDefInfo.setRightMin(Double.valueOf(getAxisPanel().getRightMinTextField().getText()));
-            gDefInfo.setRightMax(Double.valueOf(getAxisPanel().getRightMaxTextField().getText()));
+            gDefInfo.setRightMin(new Double(getAxisPanel().getRightMinTextField().getText()));
+            gDefInfo.setRightMax(new Double(getAxisPanel().getRightMaxTextField().getText()));
         } catch (NumberFormatException nfe) {
             nfe.printStackTrace();
         }
@@ -1056,7 +1070,7 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
                     type ^= GDSTypes.PRIMARY_TYPE;
                 }
             }
-            model.getRow(i - 1).setType(Integer.valueOf(type));
+            model.getRow(i - 1).setType(new Integer(type));
         }
 
         ArrayList<GraphDataSeries> dataSeries = new ArrayList<>(model.getRowCount());
@@ -1203,6 +1217,10 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
         buttonPushed = newButtonPushed;
     }
 
+    public void setGraphColors(GraphColors newGraphColors) {
+        graphColors = newGraphColors;
+    }
+
     private void setGraphDefinitionValue(GraphDefinition newValue) {
         value = newValue;
     }
@@ -1332,8 +1350,8 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
 	 */
     private boolean validData() {
         if (!getAxisPanel().getLeftAutoScalingCheckBox().isSelected()) {
-            double min = Double.valueOf(getAxisPanel().getLeftMinTextField().getText()).doubleValue();
-            double max = Double.valueOf(getAxisPanel().getLeftMaxTextField().getText()).doubleValue();
+            double min = new Double(getAxisPanel().getLeftMinTextField().getText()).doubleValue();
+            double max = new Double(getAxisPanel().getLeftMaxTextField().getText()).doubleValue();
             if (min > max) {
                 showPopupMessage("Left Axis Min value must be less than Max value.", JOptionPane.WARNING_MESSAGE);
                 return false;
@@ -1341,8 +1359,8 @@ public class CreateGraphPanel extends DataInputPanel implements DataInputPanelLi
         }
 
         if (!getAxisPanel().getRightAutoScalingCheckBox().isSelected()) {
-            double min = Double.valueOf(getAxisPanel().getRightMinTextField().getText()).doubleValue();
-            double max = Double.valueOf(getAxisPanel().getRightMaxTextField().getText()).doubleValue();
+            double min = new Double(getAxisPanel().getRightMinTextField().getText()).doubleValue();
+            double max = new Double(getAxisPanel().getRightMaxTextField().getText()).doubleValue();
             if (min > max) {
                 showPopupMessage("Right Axis Min value must be less than Max value.", JOptionPane.WARNING_MESSAGE);
                 return false;
