@@ -1,11 +1,9 @@
 package com.cannontech.graph.gds.tablemodel;
 
-import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.GregorianCalendar;
-import java.util.Iterator;
 
-import com.cannontech.common.YukonColorPalette;
+import com.cannontech.common.gui.util.Colors;
 import com.cannontech.common.util.CtiUtilities;
 import com.cannontech.core.dao.PointDao;
 import com.cannontech.database.data.lite.LitePoint;
@@ -61,7 +59,7 @@ public class GDSTableModel extends javax.swing.table.AbstractTableModel
 	};	
 
 	//Graph data series rows
-	public ArrayList<GraphDataSeries> rows = new ArrayList<>(10);
+	public java.util.ArrayList rows = new java.util.ArrayList(10);
 	
 /**
  * DataSeriesTableModel constructor comment.
@@ -96,12 +94,12 @@ public GraphDataSeries[] getAllDataSeries()
 		
 	GraphDataSeries[] retVal = new GraphDataSeries[ gdsArraySize];
 
-	Iterator<GraphDataSeries> iter = getRows().iterator();
+	java.util.Iterator iter = getRows().iterator();
 
 	int i = 0;
 	while( iter.hasNext() )
 	{
-		retVal[i++] = iter.next();
+		retVal[i++] = (GraphDataSeries) iter.next();
 	}
 
 	return retVal;
@@ -178,7 +176,7 @@ public Object getGDSAttribute(int index, GraphDataSeries gds) {
 			return gds.getLabel();
 			
 		case COLOR_NAME_COLUMN:	
-		    return YukonColorPalette.getColor(gds.getColor().intValue());
+			return Colors.getColorString(gds.getColor().intValue());
 		
 		
 		case AXIS_NAME_COLUMN:
@@ -227,7 +225,7 @@ public Object getGDSAttribute(int index, GraphDataSeries gds) {
  */
 public GraphDataSeries getRow(int row)
 {
-	return ( row < getRows().size() ? getRows().get(row) : null );
+	return ( row < getRows().size() ? (GraphDataSeries) getRows().get(row) : null );
 }
 /**
  * getRowCount method comment.
@@ -236,7 +234,12 @@ public int getRowCount()
 {
 	return getRows().size();
 }
-public ArrayList<GraphDataSeries> getRows()
+/**
+ * Insert the method's description here.
+ * Creation date: (10/23/2001 4:05:03 PM)
+ * @return java.util.ArrayList
+ */
+public java.util.ArrayList getRows()
 {
 	return rows;
 }
@@ -247,7 +250,7 @@ public Object getValueAt(int row, int col)
 {
 	if( row < getRows().size() && col < getColumnCount() )
 	{
-		return getGDSAttribute(col, getRows().get(row) );
+		return getGDSAttribute(col, (GraphDataSeries) getRows().get(row) );
 	}
 	else
 		return null;
@@ -340,17 +343,17 @@ public void setValueAt(Object value, int row, int col)
 			gds.setLabel( valueString );
 		break;
 		case COLOR_NAME_COLUMN:
-			gds.setColor(((YukonColorPalette)value).getColorId());
+			gds.setColor( new Integer(Colors.getColorID(Colors.getColor(value.toString()))));
 			
 		break;		
 		case AXIS_NAME_COLUMN:
-			gds.setAxis(Character.valueOf(Character.toUpperCase(value.toString().charAt(0))));;
+			gds.setAxis( new Character(Character.toUpperCase(value.toString().charAt(0))));;
 		break;
 		
 		case TYPE_NAME_COLUMN:
 		{
 			//Save the Integer value of the String.
-			gds.setType(Integer.valueOf(GDSTypesFuncs.getTypeInt(new String(value.toString()))));
+			gds.setType( new Integer(GDSTypesFuncs.getTypeInt(new String(value.toString()))));
 			
 			String moreData = CtiUtilities.STRING_NONE;
 			if( GDSTypesFuncs.isDateType(gds.getType().intValue()))
@@ -358,7 +361,7 @@ public void setValueAt(Object value, int row, int col)
 				java.util.Date date = ServletUtil.parseDateStringLiberally(value.toString());
 				if(date != null)
 				{
-					Long ts = Long.valueOf(date.getTime());
+					Long ts = new Long(date.getTime());
 					moreData = String.valueOf(ts);
 				}
 			}
@@ -391,7 +394,7 @@ public void setValueAt(Object value, int row, int col)
 			gds.setMultiplier( Double.valueOf(value.toString()));
 		break;
 		case REND_NAME_COLUMN:
-			gds.setRenderer(Integer.valueOf(GraphRenderers.getRendererID(value.toString())));
+			gds.setRenderer(new Integer(GraphRenderers.getRendererID(value.toString())));
 		break;
 		
 /*		case SETUP_NAME_COLUMN:
